--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,15 @@
   <meta charset="utf-8">
   <title>San Diego Top Spots</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
+  crossorigin="anonymous">
+  <style>
+    body {
+      background: #ee0979;  /* fallback for old browsers */
+      background: -webkit-linear-gradient(to right, #ff6a00, #ee0979);  /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to right, #ff6a00, #ee0979); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    }
+</style>
 </head>
-
 <body>
   <div id="root"></div>
   <script src="bundle.js"></script>
